# agent_engine

./: .env.example  .gitignore  DOCS_CLEANUP_PLAN.md  EXTRACTION_SUMMARY.md  LICENSE  Makefile  Makefile.windows  PHASE_14_MINION_SPEC.md  PHASE_15_MINION_SPEC.md  PHASE_15_SPEC.md  PHASE_16_MINION_SPEC.md  PHASE_16_SPEC.md  PHASE_17_MINION_SPEC.md  PHASE_17_SPEC.md  README.md  V1_COMPLETION_SUMMARY.md  WORKSPACE_IMPLEMENTATION_STATUS_REPORT.md  build.bat  pyproject.toml
.claude/: PROMPT_LIBRARY.md  WORKFLOW_CHECKLIST.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLI_FRAMEWORK.md  DATA_FLOW.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCUMENTATION_RULES.md  DYNAMIC_PARAMETERS.md  GETTING_STARTED.md  GETTING_STARTED_AGENT_ENGINE.md  MULTI_TASK_ISOLATION.md  PACKAGING.md  PROMPT_LIBRARY.md  SECURITY.md  TUTORIAL.md  WORKFLOW_CHECKLIST.md
examples/: __init__.py
schemas/: SCHEMAS_OVERVIEW.md
tests/: test_agent_and_tool_runtime.py  test_basic_llm_agent_example.py  test_builtin_tools.py  test_config_loader_and_json_engine.py  test_context_integration.py  test_dag_validator.py  test_dynamic_parameters.py  test_engine_initialization.py  test_engine_integration.py  test_global_store.py  test_imports.py  test_llm_client.py  test_memory_backend.py  test_phase10_artifact_storage.py  test_phase11_metadata.py  test_phase12_evaluation.py  test_phase13_metrics.py  test_phase14_policy.py  test_phase15_adapter_metadata.py  test_phase16_inspector.py  test_phase17_multi_task.py  test_phase18_cli.py  test_phase19_persistent_storage.py  test_phase20_credentials.py  (+20 more)
(+199 files in other folders)
